[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-heartbeat"
version = "0.3.0"
description = "A simple way for Python applications to push heartbeat info to a SQL database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Craig" },
]
keywords = ["heartbeat", "monitoring", "database", "sqlmodel", "postgresql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "sqlmodel>=0.0.22",
]

[project.urls]
Homepage = "https://github.com/craig-stevenson/pg-heartbeat"
Repository = "https://github.com/craig-stevenson/pg-heartbeat"
Issues = "https://github.com/craig-stevenson/pg-heartbeat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_heartbeat"]
